Adding second project box

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                 <p>A simple metronome application that serves as a tool for musicians to use to keep in time with music. A cool little project that I thought of to learn my way around the react frame work and apply Javascript knowledge.</p>
                 <p>Languages / Frameworks: </p>
             </div>
+            <div class="project-box">
+                <div class="project-img-box">?</div>
+                <div class="project-text-container">
+                    <h2>Shopkeep.io</h2>
+                    <p>Status: in progress...</p>
+                    <p>An esoteric language developed for  a school project.</p>
+                    <p>Languages / Frameworks: </p>
+                </div>
         </div>
     </div>
     <footer></footer>
