--- a/index.html
+++ b/index.html
@@ -33,16 +33,25 @@
     <div class="tab-header">projects</div>
     <div class="projects-container">
         <div class="project-box">
-            <div class="project-img-box">?</div>
+            <div class="project-img-box">
+                <img id="metronome-img" src="/PortfolioSite/assets/images/metronomeApp.png">
+            </div>
             <div class="project-text-container">
                 <h2>Metronome</h2>
-                <p>Status: in progress...</p>
-                <p>A simple metronome application that serves as a tool for musicians to use to keep in time with music. A cool little project that I thought of to learn my way around the react frame work and apply Javascript knowledge.</p>
-                <p>Languages / Frameworks: </p>
+                <p>Status: Finished</p>
+                <p>A simple metronome application that serves as a tool for musicians to use to keep in time with music. A cool little project that I thought of to learn my way around basic frontend building languages.</p>
+                <div class="icons-container">
+                    <p>Languages: </p>
+                    <img class="lang-logo" src="https://img.icons8.com/?size=100&id=23028&format=png&color=ffffff">
+                    <img class="lang-logo" src="https://img.icons8.com/?size=100&id=106036&format=png&color=ffffff">
+                    <img class="lang-logo" src="https://img.icons8.com/?size=100&id=102501&format=png&color=ffffff">
+                </div>
             </div>
         </div>
         <div class="project-box">
-            <div class="project-img-box">?</div>
+            <div class="project-img-box">
+                ?
+            </div>
             <div class="project-text-container">
                 <h2>Shopkeep.io</h2>
                 <p>Status: in progress...</p>
