Fixing metronome project box

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works of Ray</title>
@@ -28,7 +32,8 @@
     </div>
     <div class="about-me-container">
         <div class="about-tab-header"> about me</div>
-        <p id="about-me-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsum recusandae repellendus ipsa minima maiores, ut voluptatem numquam illum asperiores facilis rerum earum impedit beatae aperiam consectetur necessitatibus nesciunt quaerat!</p>
+        <p class="about-me-text">I am currently a student studying software engineering at San Diego State University. At the moment I am front end focused but am learning more about full stack to develop my skill set further.</p>
+        <p class="about-me-text">Outside of computer programming, I very much enjoy playing the guitar and assembling keyboards.</p>
     </div>
     <div class="tab-header">projects</div>
     <div class="projects-container">
@@ -46,17 +51,13 @@
                     <img class="lang-logo" src="https://img.icons8.com/?size=100&id=106036&format=png&color=ffffff">
                     <img class="lang-logo" src="https://img.icons8.com/?size=100&id=102501&format=png&color=ffffff">
                 </div>
-            </div>
-        </div>
-        <div class="project-box">
-            <div class="project-img-box">
-                ?
-            </div>
-            <div class="project-text-container">
-                <h2>Shopkeep.io</h2>
-                <p>Status: in progress...</p>
-                <p>An esoteric language developed for  a school project.</p>
-                <p>Languages / Frameworks: </p>
+                <div class="link-container">
+                    <p>Link: </p>
+                    <a href="https://leimondu.github.io/Metronome/">
+                        <img id="github-logo" src="https://img.icons8.com/?size=100&id=12599&format=png&color=ffffff">
+                    </a>
+                    
+                </div>
             </div>
         </div>
     </div>
